deployment/templates/kafdrop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
spec:
  selector:
    app.kubernetes.io/name: kafdrop
  ports:
    - name: http
      port: 80
      targetPort: http
